--- a/css/styles.css
+++ b/css/styles.css
@@ -7,27 +7,40 @@ body{
  
 }
 .logo{
-    background-color: aqua;  height: 49px;
+    background: #67AEFC;  height: 49px;
 
 display: flex;}
 .logo-leftVector{
-   
-    width: 24px;
+    fill: #4B086D;
+    z-index: 2;
+ width: 24px;
     height: 28px;
-    
-    fill: #ACC0FE;
-  
-
-    background-color:linear-gradient(0deg, #ACC0FE -140199.09%, #4B086D -124374.04%) ;
-}
+     background: linear-gradient(0deg, #ACC0FE -140199.09%, #67AEFC -124374.04%);}
 .logo-RignthVector{
-    width: 24px;height: 27px;
+    z-index: 1;
+    fill: #4B086D;
+    width: 24px;
+    height: 27px;
     position: absolute;
-    fill: #ACC0FE;
-
     left: 17px;
     top: 6px;
+    fill: linear-gradient(0deg, #ACC0FE -139612.06%, #4B086D -123391.04%);}
+.logo-rv{
+    z-index: 5;
+    position: absolute;
+    top: 11px;
+    left: 28px;
+    width: 10px;
+    height: 20px;
 }
+.logo-lv{
+    z-index: 5;
+    position: absolute;
+    top: 4px;left: 4px;
+    width: 10px;height: 20px;
+    
+}
+
 .logo-ellips{
     width: 13px;
     height: 13px;
@@ -46,8 +59,8 @@ top: 84px;
 .cylinder275{
     position: absolute;
     padding: 35px 0 0 144px;
-left: 144px;
-top: 84px;
+/* left: 144px;
+top: 84px; */
 
 }
 .ellips3{
@@ -96,7 +109,7 @@ background: #FFFFFF;
     left: 249px;
 }
 .wave258{
-    z-index: 6;
+    z-index: 11;
     position: absolute;
     width: 91px;
     height: 33px;
@@ -115,14 +128,22 @@ background: #FFFFFF;
 /* END IMG MAIN  */
 .logo-left{
     position: absolute;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     margin: 9px 0 5px 12px ;
 }
 .section-main{
     background-color: white;
 }
 .logo-text{
-    margin-left: 20px;
+    position: absolute;
+    top: 12px;
+    left: 43px;
+    color: white;
+    font-size: 9.31px;
+    font-family: 'Montserrat';
+    text-decoration: none;
+    letter-spacing: .2rem;
+    font-weight: bold;
 }
 .logo-burger{
     margin-left: 306px;
@@ -130,7 +151,6 @@ background: #FFFFFF;
     width: 49px;
     height: 13px;
     justify-content: space-between;
-    border: 1px solid black;
     margin-top: 20px;
 }
 .main-primary-text{
@@ -160,13 +180,23 @@ background: #FFFFFF;
             margin: 11px 19px  17px 19px;
           
         }
+.button-mobile{
+    height: 15px;
+    width: 54px;
+    display: flex;
+    padding: 0;
+    justify-content: space-between;
+    background-color: transparent;
+    border: none;
+}
 
     .primary-button{
         width: 335px;
         background: #75E169;
         border-radius: 10px;
         margin: 17px 20px 51px 20px;
-        padding: 17px 123px;
+        padding-top: 17px;
+        padding-bottom: 17px;
         border: none;
     }
     .main-text{
@@ -184,6 +214,22 @@ color: #111111;
     .info-servis{
         background-color: #DAECFF;
     }
+    .button-info{
+        width: 30px;
+    height: 30px;
+    margin-left: 78px;
+    margin-top: 7px;
+    background-color: transparent;
+    border: none;
+    }
+    .button-info-closed{
+        /* width: 35px;
+        height: 35px; */
+        border: none;
+        background-color:transparent;
+        /* margin-left: 279px; */
+        /* margin-top: 12px; */
+    }
     .info-item{
         position: relative;
         border-radius: 10px;
@@ -198,14 +244,51 @@ color: #111111;
     .primary-info{
         padding-bottom: 30px;
     }
+    .div1-svgup{
+        width: 30px;
+        height: 30px;
+        position: absolute;
+        top: 15px;
+        right: 23px;
+    }
+    .div2-svgup{
+        width: 30px;
+        height: 30px;
+        position: absolute;
+        top: 15px;
+        right: 23px;
+    }
+    .div3-svgup{
+        width: 30px;
+        height: 30px;
+        position: absolute;
+        top: 15px;
+        right: 23px;
+    }
+    .div4-svgup{
+        width: 30px;
+        height: 30px;
+        position: absolute;
+        top: 15px;
+        right: 23px;
+    }
+    .div5-svgup{
+        width: 30px;
+        height: 30px;
+        position: absolute;
+        top: 15px;
+        right: 23px;
+    }
     .primary-info-svg{
         position: absolute;
         top: 12px;
         left: 282px;
         width: 30px;
         height: 30px;
-     
         /* padding: 15px 23px 0 112px; */
+    }
+    .transform{
+        transform: rotate(180deg);
     }
     .primary-info-text{
         font-family: 'Montserrat';
@@ -220,8 +303,100 @@ color: #111111;
     }
     .info-item-secondary{
         display: none;
+        width: 335px;
     }
+    .info-item-secondary.is-open{
+        position: absolute;
+        z-index: 15;
+        display: block;
+        background-color: white;
 
+    
+    }
+.info-text-secondary{
+    font-family: 'Montserrat';
+font-style: normal;
+font-weight: 800;
+font-size: 17px;
+line-height: 27px;
+margin: 0;
+
+color: #111111;
+}
+.info-paragraph-secondary{
+    font-family: 'Montserrat';
+font-style: normal;
+font-weight: 400;
+font-size: 17px;
+line-height: 175%;
+
+color: #000000;
+padding-left: 24px;
+margin: 0 41px 46px 33px;
+}
+.border{
+    border-left: 1px solid #000000;
+}
+.inform-div1{
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+    margin-top: 18px;
+}
+.inform-div2{
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+    margin-top: 18px;
+}
+.inform-div3{
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+    margin-top: 18px;
+}
+.inform-div4{
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+    margin-top: 18px;
+}
+.inform-div5{
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+    margin-top: 18px;
+}
+.inform-div1-img{
+    width: 15px;
+    height: 15px;
+    margin-left: 24px;
+    margin-right: 18px;
+}
+.inform-div2-img{
+    width: 15px;
+    height: 15px;
+    margin-left: 24px;
+    margin-right: 18px;
+}
+.inform-div3-img{
+    width: 15px;
+    height: 15px;
+    margin-left: 24px;
+    margin-right: 18px;
+}
+.inform-div4-img{
+    width: 15px;
+    height: 15px;
+    margin-left: 24px;
+    margin-right: 18px;
+}
+.inform-div5-img{
+    width: 15px;
+    height: 15px;
+    margin-left: 24px;
+    margin-right: 18px;
+}
     /* /////////////////////////DEVELOPMENT section //////////////////// */
     
     .development{
@@ -243,7 +418,7 @@ color: #111111;
         width: 335px;
         height: 615px;
     
-        margin: 0 20px ;
+        margin: 0 ;
         
         border: 2px solid #67AEFC;
         border-radius: 15px;
@@ -284,16 +459,13 @@ color: #000000;
         display: flex;
         width: 227px;
         justify-content: space-between;
-        margin-left: 50px;
-        margin-top: 25px;
-        margin-bottom: 45px;
+        margin: 25px auto 45px auto;
     }
 
     /* /////////////////////////////////Examples section/////////////////// */
 
     .examples{
         background: #DAECFF;
-        margin-top: 130px;
     }
     .examples-text{
         font-family: 'Montserrat';
@@ -310,8 +482,8 @@ padding: 23px 27px 14px 27px;
     }
     .examples-img{
         border-radius: 16px;
-        margin-left: 20px;
-        margin-right: 20px;
+        /* margin-left: 20px;
+        margin-right: 20px; */
     }
     .examples-img:not(:last-child){
         margin-bottom: 15px;
@@ -320,10 +492,372 @@ padding: 23px 27px 14px 27px;
         margin-bottom: 30px;
     }
     .examples-groupe{
+        /* margin-top: 520px; */
         display: flex;
         justify-content: space-between;
         margin: 0 74px 0 74px;
         padding-bottom:30px ;
     }
     /* ////////////////////////////////////Inform section/////////////////// */
+    .inform{
+        margin-top: 43px;
+    }
+    .inform-secondary-img{
+        position: absolute;
+        top: 3325px;
+        left: 304px;
+    }
+    .inform-text{
+        font-family: 'Montserrat';
+        font-style: normal;
+        font-weight: 800;
+        font-size: 23px;
+        line-height: 150%;
+        /* or 34px */
+        margin-bottom: 27px;
+        text-align: center;
+        
+        color: #111111;
+    }
+    .inform-img{
+       margin: 0 57px 29px 57px;
+    }
+    .inform-primary-text{
+        margin: 0 20px 33px 20px;
+        font-family: 'Montserrat';
+font-style: normal;
+font-weight: 400;
+font-size: 17px;
+line-height: 175%;
+/* or 30px */
+
+color: #111111;
+    }
+    .primary-button-text{
+        /* pad  ding: 17px 88px; */
+        font-family: 'Montserrat';
+font-style: normal;
+font-weight: 700;
+font-size: 15px;
+line-height: 175%;
+/* or 26px */
+text-align: center;
+text-transform: uppercase;
+
+color: #FFFFFF;
+    }
+    .primary-button-inform{
+        width: 335px;
+        background: #75E169;
+        border-radius: 10px;
+        margin: 0 20px 51px 20px;
+        padding-top: 17px;
+        padding-bottom: 17px;
+        border: none;
+    }
+    /* ////////////////////////discussion section///////////////// */
+.discussion{
+    padding-top: 42px;
+    background-color:#DAECFF ;
+}
+
+    .discussion-text{
+        font-family: 'Montserrat';
+font-style: normal;
+font-weight: 800;
+font-size: 23px;
+line-height: 150%;
+/* or 34px */
+margin: 0;
+text-align: center;
+margin-bottom: 17px;
+color: #111111;
+    }
+    .discussion-primary-text{
+        font-family: 'Montserrat';
+font-style: normal;
+font-weight: 400;
+font-size: 17px;
+line-height: 175%;
+/* or 30px */
+margin: 0 23px 25px 23px;
+text-align: center;
+
+color: #111111;
+    }
+    /* ///////////////////////////inform section////////////////// */
+    .inform-subscription{
+     width: 335px;
+     margin-left: 20px;
+     margin-right: 20px; 
+    }
+    .inform-input{
+       
+        padding: 19px 0 19px 17px;
+        width: 316px;
+        
+        background: #FFFFFF;
+border: 1px solid #67AEFC;
+border-radius: 10px;
+    }
+    .inform-input:not(:last-child){
+        margin-bottom: 10px;
+    }
+    .inform-input:last-child{
+        margin-bottom: 15px;
+    }
+    .inform-img{
+        width: 286px;
+        height: 291px;
+        margin: 0 41px 25px 41px;
+    }
+    /* //////////////////FOOTER SECTION///////////// */
+.footer-inform{
+    position: relative;
+padding-left: 46px;
+padding-top: 46px;
+}
+  
+    footer{
+        background-color: #67AEFC;
+    }
     
+.footer-leftVector{
+    fill: #4B086D;
+width: 49px;
+height: 51px;
+background: linear-gradient(0deg, #ACC0FE -140199.09%, #67AEFC -124374.04%)
+}
+    .footer-RignthVector{
+        position: absolute;
+        fill: #4B086D;
+width: 49px;
+height: 52px;
+top: 59px;
+left: 79px;
+    }
+    .footer-lv{
+        z-index: 5;
+        position: absolute;
+        width: 21px;
+        height: 39px;
+        top: 53px;
+        left: 54px;
+    }
+    .footer-rv{
+        z-index: 5;
+        position: absolute; 
+        top: 67px;
+        width: 21px;
+        height: 39px;
+    }
+    .footer-svg{
+width: 28px;height: 29px;
+margin-bottom: 8px;
+    }
+.footer-text{
+    position: absolute;
+bottom: 10px;
+    color: white;
+    margin-left: 32px;
+    font-size: 17.56px;
+    font-family: 'Montserrat';
+    font-style: normal;
+    text-decoration: none;
+    letter-spacing: .2rem;
+    font-weight: bold;
+
+}
+    .footer-list{
+       
+display: block;
+padding: 0;
+margin: 37px 52px 57px 56px;
+    }
+    .footer-item{
+        margin: 0;
+display: flex;
+justify-content: space-between;
+    }
+    .footer-paragraph{
+        margin: 0;
+        font-family: 'Montserrat';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 140%;
+/* or 22px */
+
+
+/* white */
+
+color: #FFFFFF;
+    }
+    .footer-paragraph-anna{
+        font-family: 'Montserrat';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 140%;
+        /* or 22px */
+        
+        
+        /* white */
+        
+        color: #FFFFFF;
+margin: 0;
+margin-right: 20px;    }
+   
+/* .footer-svg-social{
+    
+} */
+.footer-social{
+    margin: 58px 71px 41px 63px;
+    display: flex;
+    justify-content: space-between;
+}
+.footer-number{font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 140%;
+    /* or 22px */
+    
+    
+ text-decoration: none;
+    
+    color: #FFFFFF;}
+.footer-email{
+  margin: 0 0 24px 78px;  
+}
+    .footer-link{
+        text-decoration: none;
+        font-family: 'Montserrat';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 140%;
+        /* or 22px */
+        
+        
+        /* white */
+        
+        color: #FFFFFF;
+    }
+    .fin{
+        margin-right: 75px;
+        margin-left: 45px;
+        font-family: 'Montserrat';
+font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 140%;
+/* or 20px */
+padding-bottom: 145px;
+text-align: center;
+
+/* white */
+
+color: #FFFFFF;
+    }
+
+
+    /* //////////////////Mobile nav//////////////////////// */
+    
+    .mobile-nav{
+        display: none;
+        width: 375px;
+        height: 328px;
+        background: rgba(103, 174, 252, 0.95);
+        border-radius: 0px;    }
+
+        .mobile-nav.is-open{
+            display: block;
+        
+            position: absolute;
+            top: 48px;
+            left: 0;
+            z-index: 999;
+        }
+        .mobile-nav-list{
+            padding: 0;
+            padding: 42px 124px 49px 124px;
+        }
+        .mobile-nav-item{
+            list-style: none;
+            margin: 0;
+            text-align: center;
+        }
+        .mobile-nav-item:not(:last-child){
+            margin-bottom: 43px;
+        }
+.nav-current{
+    border-bottom: 2px solid #FFFFFF;
+}
+        .mobile-nav-text{
+            font-family: 'Montserrat';
+            font-style: normal;
+            font-weight: 800;
+            font-size: 17px;
+            line-height: 27px;
+            margin: 0;
+            text-transform: uppercase;
+            
+            color: #FFFFFF;
+        }
+       /* //////////////////SLIDER//////////////// */
+       .slider{
+        width: 339px;
+        margin: 0 auto;
+        overflow: hidden;
+       }
+       .slider-examples{
+        /* border: 2px solid black; */
+        width: 335px;
+        height: 820px;
+        margin: 20px auto;
+        overflow: hidden;
+
+       }
+       .slider-examples-line{
+        height: 820px;
+        width: 335px;
+        display: flex;
+        position: relative;
+        left: 0;
+       }
+      /* .div{
+        height: 820px;
+      }
+      .div2{
+        height: 820px;
+      } */
+      
+     
+      
+    
+     
+
+       .slider-line{
+        position: relative;
+        width: 1695px;
+        display: flex;
+        left: 0;
+        transition: all ease 1s;
+       }
+       .slider-next{
+ border: none;
+        background-color: transparent;
+       }
+       .slider-prev{
+ border: none;
+        background-color: transparent;
+       }
+       .slider-examples-next{
+        border: none;
+        background-color: transparent;
+       }
+       .slider-examples-prev{
+        border: none;
+        background-color: transparent;
+       }
