--- a/css/st.css
+++ b/css/st.css
@@ -6,3 +6,10 @@
 @media(min-width:375px) and (max-width:860px) {
     
 }
+
+@media(min-width:861px) and (max-width:1919px) {
+        
+}
+
+margin-right: auto;
+        margin-left: auto;
